# sliver_extension_uac_bypass_cmstp

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  extension.json
src/: lib.rs  main.rs
